# aircraft-service

./: Makefile  README.md  pyproject.toml  setup.cfg
app/: exception_handlers.py  main.py
app/aircraft_service/: custom_exceptions.py  routes.py  schemas.py  service.py
app/core/: __main__.py  settings.py
tests/: test_aircraft_service.py  test_routes.py
